--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -152,7 +152,7 @@
                             <div>
                                 <form class="form-outline mb-4 mt-1" method="post" action="#" th:action="@{/saveComment(post_id=${post.post_id})}">
                                     <input type="text" name="commentText" class="form-control col-sm-9" placeholder="Type comment..."/>
-                                    <button type="submit" class="btn btn-primary col-sm-3">Primary</button>
+                                    <button type="submit" class="btn btn-primary col-sm-3">Save</button>
                                 </form>
                             </div>
                             <!--  Comments  -->
