--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/feedStyle.css">
+    <link rel="stylesheet" href="static/feedStyle.css">
     <title>feed</title>
 </head>
 <body style="background: #e1e3e6">
@@ -71,6 +71,16 @@
                             <div class="col-sm-9" th:text="${post.body}"></div>
                         </div>
                         <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0 text-secondary">Images</h6>
+                            </div>
+                            <div class="mt-2" th:each="image: ${post.images}">
+                                <a th:href="${image.link}"><img th:src="${image.link}" width="500" height="300"></a>
+                            </div>
+                        </div>
+                        <hr>
+
                         <!--  Comments  -->
                         <div class="row">
                             <div class="col-sm-12">
