--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -6,6 +6,7 @@
           rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
           crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/imageLoader.css">
     <title th:text="${user.username}"></title>
 </head>
 <body style="background: #e1e3e6">
@@ -51,7 +52,7 @@
 
             <!-- Create post-->
             <div class="col-md-8 mt-3" th:if="${isEditEnabled}">
-                <form method="post" action="#">
+                <form method="post" action="#" enctype="multipart/form-data">
                     <div class="card mb-3">
                         <div class="card-body">
                             <div class="row">
@@ -73,6 +74,17 @@
                                     <h6 class="mb-0 text-secondary">Topic</h6>
                                 </div>
                                 <textarea class="col-sm-9" rows="3" name="body" required></textarea>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0 text-secondary">Upload images</h6>
+                                </div>
+                                <div class="file-drop-area col-sm-9">
+<!--                                    <span class="choose-file-button">Choose files</span>-->
+<!--                                    <span class="file-message">or drag and drop files here</span>-->
+                                    <input class="file-input" type="file" name="images" multiple>
+                                </div>
                             </div>
                             <hr>
                             <div class="row">
@@ -109,6 +121,15 @@
                                     <h6 class="mb-0 text-secondary">Topic</h6>
                                 </div>
                                 <div class="col-sm-9" name="body" th:text="${post.body}"></div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0 text-secondary">Images</h6>
+                                </div>
+                                <div class="mt-2" th:each="image: ${post.imagesToShow}">
+                                    <a th:href="${image.link}"><img th:src="${image.link}" width="500" height="300"></a>
+                                </div>
                             </div>
                             <div th:if="${isEditEnabled}">
                             <hr>
@@ -166,6 +187,19 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous">
+</script>
+<script>
+    $(document).on('change', '.file-input', function() {
+        var filesCount = $(this)[0].files.length;
+        var textbox = $(this).prev();
+
+        if (filesCount === 1) {
+            var fileName = $(this).val().split('\\').pop();
+            textbox.text(fileName);
+        } else {
+            textbox.text(filesCount + ' files selected');
+        }
+    });
 </script>
 </body>
 </html>
