created post rating

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -39,9 +39,9 @@
             </div>
             <hr class="my-4">
             <div class="d-grid mb-2">
-              <button class="btn btn-google btn-login text-uppercase fw-bold" id="googleAuth" type="submit" th:utext="#{googleSignIn}">
-                <i class="fab fa-google me-2"></i>
-              </button>
+             <a th:href="@{/oauth2/authorization/google}"> <button class="btn btn-google btn-login text-uppercase fw-bold" id="googleAuth" type="submit" th:utext="#{googleSignIn}">
+<!--                <i class="fab fa-google me-2"></i>-->
+             </button> </a>
             </div>
             <div>
 <!--              <button><a href="/registration" th:utext="#{login.createAnAccount}">Or create an account</a> </button>-->
