--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="static/feedStyle.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <title>feed</title>
 </head>
 <body style="background: #e1e3e6">
@@ -41,6 +42,22 @@
             <div class="mt-2 justify-content-center">
                 <div class="card mb-3">
                     <div class="card-body">
+                        <div th:if="${authentication}">
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0 text-secondary">Rate</h6>
+                            </div>
+                            <div class="col-sm-7" name="rate" th:text="${post.rate}"></div>
+                            <div class="col-sm-2">
+                                <a type="submit" style="border-width:0" th:href="@{/saveRate(post_id=${post.post_id}, rate=${1})}"><i class="fa fa-star"></i></a>
+                                <a type="submit" style="border-width:0" th:href="@{/saveRate(post_id=${post.post_id}, rate=${2})}"><i class="fa fa-star"></i></a>
+                                <a type="submit" style="border-width:0" th:href="@{/saveRate(post_id=${post.post_id}, rate=${3})}"><i class="fa fa-star"></i></a>
+                                <a type="submit" style="border-width:0" th:href="@{/saveRate(post_id=${post.post_id}, rate=${4})}"><i class="fa fa-star"></i></a>
+                                <a type="submit" style="border-width:0" th:href="@{/saveRate(post_id=${post.post_id}, rate=${5})}"><i class="fa fa-star"></i></a>
+                            </div>
+                        </div>
+                        <hr>
+                        </div>
                         <div class="row">
                             <div class="col-sm-3">
                                 <h6 class="mb-0 text-secondary">Author</h6>
