--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -171,7 +171,7 @@
                                     <div class="card mb-4 mt-3" th:each="comment: ${post.comments}">
                                         <div class="card-body">
                                             <div >
-                                                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(4).webp"
+                                                <img src="https://bootdey.com/img/Content/avatar/avatar7.png"
                                                      alt="avatar" width="25" height="25"
                                                 />
                                                 <a th:text="${comment.author.userName}"
