--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -40,6 +40,8 @@
                             <div class="d-grid">
                                 <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit" th:utext="#{registration.signUpButton}"></button>
                             </div>
+                            <hr class="my-4">
+                            <p>Have an account? <a href="/login" >Sign In</a></p>
                         </form>
                     </div>
                 </div>
