--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,9 +29,8 @@
               <input type="password" class="form-control" id="password" name="password" placeholder="Password">
               <label for="password" th:utext="#{password}"></label>
             </div>
-
             <div class="form-check mb-3">
-              <input class="form-check-input" type="checkbox" value="" id="remember-me" name="remember-me">
+              <input class="form-check-input" type="checkbox" id="remember-me" name="remember-me">
               <label class="form-check-label" for="remember-me" th:utext="#{login.rememberMe}"></label>
             </div>
             <div class="d-grid">
